# image-processing-pipeline

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/data/: operations_config.json
cpp/include/: image_processor.h  image_utils.h  pipeline_types.h
cpp/src/: image_utils.cpp  main.cpp  pipeline_executor.cpp
java/imagepipeline/: pom.xml
java/imagepipeline/src/main/java/com/stripe/interview/: ImageUtils.java  Main.java  PipelineExecutor.java  PipelineTypes.java
